--- a/images.qrc
+++ b/images.qrc
@@ -26,5 +26,6 @@
         <file>images/add.png</file>
         <file>images/remove.png</file>
         <file>images/addTask.png</file>
+        <file>images/clearList.png</file>
     </qresource>
 </RCC>
