--- a/ViewSparePart.ui
+++ b/ViewSparePart.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>742</width>
-    <height>229</height>
+    <height>235</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -73,6 +73,11 @@ QPushButton:pressed {
     <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="1">
       <widget class="QLabel" name="label_2">
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Производитель</string>
        </property>
@@ -80,6 +85,11 @@ QPushButton:pressed {
      </item>
      <item row="2" column="1">
       <widget class="QLabel" name="label_4">
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Совместимость с автомобилями</string>
        </property>
@@ -87,6 +97,11 @@ QPushButton:pressed {
      </item>
      <item row="0" column="0">
       <widget class="QLabel" name="label">
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Название запчасти</string>
        </property>
@@ -94,6 +109,11 @@ QPushButton:pressed {
      </item>
      <item row="4" column="0">
       <widget class="QLabel" name="label_5">
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Оригинал / аналог</string>
        </property>
@@ -201,6 +221,11 @@ QPushButton:pressed {
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="label_3">
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Количество в наличии</string>
        </property>
@@ -228,6 +253,11 @@ QPushButton:pressed {
      </item>
      <item row="4" column="1">
       <widget class="QLabel" name="label_6">
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Цена</string>
        </property>
