--- a/StartWindow.ui
+++ b/StartWindow.ui
@@ -361,7 +361,7 @@ QPushButton:hover {
       <widget class="QFrame" name="frame_11">
        <property name="minimumSize">
         <size>
-         <width>750</width>
+         <width>762</width>
          <height>0</height>
         </size>
        </property>
@@ -387,6 +387,12 @@ QPushButton:hover {
        <layout class="QGridLayout" name="gridLayout_14">
         <item row="1" column="1">
          <widget class="QTableView" name="completedTasksTableView">
+          <property name="minimumSize">
+           <size>
+            <width>366</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="styleSheet">
            <string notr="true">QTableView {
 	background-color: none;
@@ -396,6 +402,7 @@ QPushButton:hover {
 QHeaderView {
 	border-radius: 0px;
 	background-color: #f5f5f5;
+	font-size: 9pt;
 	border: 0px;
 }
 
@@ -404,10 +411,22 @@ QHeaderView::section {
 }
 </string>
           </property>
+          <property name="selectionMode">
+           <enum>QAbstractItemView::NoSelection</enum>
+          </property>
+          <property name="verticalScrollMode">
+           <enum>QAbstractItemView::ScrollPerPixel</enum>
+          </property>
          </widget>
         </item>
         <item row="1" column="0">
          <widget class="QTableView" name="notCompletedTasksTableView">
+          <property name="minimumSize">
+           <size>
+            <width>366</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="styleSheet">
            <string notr="true">QTableView {
 	background-color: none;
@@ -417,12 +436,22 @@ QHeaderView::section {
 QHeaderView {
 	border-radius: 0px;
 	background-color: #f5f5f5;
+	font-size: 9pt;
 	border: 0px;
 }
 
 QHeaderView::section {
 	background-color: white;
 }</string>
+          </property>
+          <property name="selectionMode">
+           <enum>QAbstractItemView::NoSelection</enum>
+          </property>
+          <property name="verticalScrollMode">
+           <enum>QAbstractItemView::ScrollPerPixel</enum>
+          </property>
+          <property name="gridStyle">
+           <enum>Qt::SolidLine</enum>
           </property>
          </widget>
         </item>
