--- a/AddEmployee.ui
+++ b/AddEmployee.ui
@@ -68,6 +68,9 @@ QPushButton:pressed {
        <height>30</height>
       </size>
      </property>
+     <property name="autoDefault">
+      <bool>false</bool>
+     </property>
     </widget>
    </item>
    <item row="1" column="0">
