--- a/AddOrder.ui
+++ b/AddOrder.ui
@@ -812,7 +812,7 @@
               </size>
              </property>
              <property name="focusPolicy">
-              <enum>Qt::NoFocus</enum>
+              <enum>Qt::StrongFocus</enum>
              </property>
              <property name="toolTip">
               <string>Очистить список</string>
@@ -845,6 +845,9 @@ QPushButton:pressed {
                <width>30</width>
                <height>30</height>
               </size>
+             </property>
+             <property name="autoDefault">
+              <bool>false</bool>
              </property>
             </widget>
            </item>
@@ -932,6 +935,8 @@ QPushButton:pressed {
            <string notr="true">QTableView {
 	background-color: none;
 	border-radius: 0px;
+    selection-color: black; 
+	selection-background-color: #f2e7ff;
 }
 
 QLabel {
@@ -1048,6 +1053,8 @@ QHeaderView::section {
            <string notr="true">QTableView {
 	background-color: none;
 	border-radius: 0px;
+	selection-color: black; 
+	selection-background-color: #f2e7ff;
 }
 
 QHeaderView {
@@ -1338,7 +1345,7 @@ QHeaderView::section {
            </font>
           </property>
           <property name="focusPolicy">
-           <enum>Qt::TabFocus</enum>
+           <enum>Qt::StrongFocus</enum>
           </property>
           <property name="styleSheet">
            <string notr="true">QTextEdit {
@@ -1455,7 +1462,7 @@ QHeaderView::section {
         </size>
        </property>
        <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
+        <enum>Qt::StrongFocus</enum>
        </property>
        <property name="layoutDirection">
         <enum>Qt::RightToLeft</enum>
@@ -1489,6 +1496,9 @@ QPushButton:pressed {
          <height>30</height>
         </size>
        </property>
+       <property name="autoDefault">
+        <bool>false</bool>
+       </property>
       </widget>
      </item>
      <item row="1" column="1">
@@ -1505,7 +1515,7 @@ QPushButton:pressed {
         </font>
        </property>
        <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
+        <enum>Qt::StrongFocus</enum>
        </property>
        <property name="styleSheet">
         <string notr="true">QPushButton {
@@ -1525,6 +1535,9 @@ QPushButton:pressed {
        </property>
        <property name="text">
         <string>Открыть карту</string>
+       </property>
+       <property name="autoDefault">
+        <bool>false</bool>
        </property>
       </widget>
      </item>
