--- a/AddSparePart.ui
+++ b/AddSparePart.ui
@@ -158,6 +158,9 @@ QPushButton:pressed {
          <height>30</height>
         </size>
        </property>
+       <property name="autoDefault">
+        <bool>false</bool>
+       </property>
       </widget>
      </item>
      <item row="1" column="1" colspan="2">
