--- a/AddTask.ui
+++ b/AddTask.ui
@@ -194,6 +194,9 @@ QPushButton:pressed {
          <height>30</height>
         </size>
        </property>
+       <property name="autoDefault">
+        <bool>false</bool>
+       </property>
       </widget>
      </item>
      <item row="0" column="0" colspan="3">
