--- a/ListEmployees.ui
+++ b/ListEmployees.ui
@@ -17,6 +17,12 @@
    <iconset resource="images.qrc">
     <normaloff>:/images/autoService-logo.png</normaloff>:/images/autoService-logo.png</iconset>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QDialog {
+	background-color: #fcfff7;
+	background-image: url(:/images/backgroundImage.png)
+}</string>
+  </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
     <widget class="QFrame" name="frame">
@@ -83,6 +89,9 @@ QPushButton:pressed {
           <height>30</height>
          </size>
         </property>
+        <property name="autoDefault">
+         <bool>false</bool>
+        </property>
        </widget>
       </item>
       <item row="0" column="1">
@@ -127,6 +136,9 @@ QPushButton:pressed {
           <width>33</width>
           <height>33</height>
          </size>
+        </property>
+        <property name="autoDefault">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
