--- a/ListOrders.ui
+++ b/ListOrders.ui
@@ -13,6 +13,12 @@
   <property name="windowTitle">
    <string>Список заказов</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QDialog {
+	background-color: #fcfff7;
+	background-image: url(:/images/backgroundImage.png)
+}</string>
+  </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
     <widget class="QFrame" name="frame">
@@ -120,6 +126,9 @@ QPushButton:pressed {
           <height>35</height>
          </size>
         </property>
+        <property name="autoDefault">
+         <bool>false</bool>
+        </property>
        </widget>
       </item>
       <item row="0" column="3">
@@ -164,6 +173,9 @@ QPushButton:pressed {
           <width>30</width>
           <height>30</height>
          </size>
+        </property>
+        <property name="autoDefault">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
