--- a/ListSpareParts.ui
+++ b/ListSpareParts.ui
@@ -18,7 +18,10 @@
     <normaloff>:/images/autoService-logo.png</normaloff>:/images/autoService-logo.png</iconset>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">QDialog {
+	background-color: #fcfff7;
+	background-image: url(:/images/backgroundImage.png)
+}</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
@@ -114,6 +117,9 @@ QPushButton:pressed {
           <height>30</height>
          </size>
         </property>
+        <property name="autoDefault">
+         <bool>false</bool>
+        </property>
        </widget>
       </item>
       <item row="0" column="2">
@@ -155,6 +161,9 @@ QPushButton:pressed {
           <width>35</width>
           <height>35</height>
          </size>
+        </property>
+        <property name="autoDefault">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
