--- a/ListTasks.ui
+++ b/ListTasks.ui
@@ -13,6 +13,12 @@
   <property name="windowTitle">
    <string>Список заданий</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QDialog {
+	background-color: #fcfff7;
+	background-image: url(:/images/backgroundImage.png)
+}</string>
+  </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
     <widget class="QFrame" name="frame">
@@ -79,6 +85,9 @@ QPushButton:pressed {
           <height>30</height>
          </size>
         </property>
+        <property name="autoDefault">
+         <bool>false</bool>
+        </property>
        </widget>
       </item>
       <item row="0" column="1">
@@ -123,6 +132,9 @@ QPushButton:pressed {
           <width>34</width>
           <height>34</height>
          </size>
+        </property>
+        <property name="autoDefault">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
