--- a/UpdateClients.ui
+++ b/UpdateClients.ui
@@ -51,6 +51,9 @@ QPushButton:pressed {
        <height>27</height>
       </size>
      </property>
+     <property name="autoDefault">
+      <bool>false</bool>
+     </property>
     </widget>
    </item>
    <item row="0" column="1">
@@ -268,6 +271,9 @@ QPushButton:pressed {
        <width>27</width>
        <height>27</height>
       </size>
+     </property>
+     <property name="autoDefault">
+      <bool>false</bool>
      </property>
     </widget>
    </item>
