--- a/UpdateEmployee.ui
+++ b/UpdateEmployee.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>620</width>
-    <height>221</height>
+    <height>225</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -56,6 +56,9 @@ QPushButton:pressed {
        <width>27</width>
        <height>27</height>
       </size>
+     </property>
+     <property name="autoDefault">
+      <bool>false</bool>
      </property>
     </widget>
    </item>
@@ -108,6 +111,9 @@ QPushButton:pressed {
        <width>27</width>
        <height>27</height>
       </size>
+     </property>
+     <property name="autoDefault">
+      <bool>false</bool>
      </property>
     </widget>
    </item>
