--- a/UpdateSparePart.ui
+++ b/UpdateSparePart.ui
@@ -74,6 +74,9 @@ QPushButton:pressed {
        <height>27</height>
       </size>
      </property>
+     <property name="autoDefault">
+      <bool>false</bool>
+     </property>
     </widget>
    </item>
    <item row="2" column="0" colspan="4">
@@ -290,6 +293,9 @@ QPushButton:pressed {
        <width>27</width>
        <height>27</height>
       </size>
+     </property>
+     <property name="autoDefault">
+      <bool>false</bool>
      </property>
     </widget>
    </item>
