--- a/ViewClient.ui
+++ b/ViewClient.ui
@@ -76,6 +76,9 @@ QPushButton:pressed {
      <property name="autoExclusive">
       <bool>true</bool>
      </property>
+     <property name="autoDefault">
+      <bool>false</bool>
+     </property>
     </widget>
    </item>
    <item row="1" column="0" colspan="3">
