--- a/ViewEmployee.ui
+++ b/ViewEmployee.ui
@@ -67,6 +67,9 @@ QPushButton:pressed {
        <height>32</height>
       </size>
      </property>
+     <property name="autoDefault">
+      <bool>false</bool>
+     </property>
     </widget>
    </item>
    <item row="1" column="0" colspan="2">
