--- a/ViewSparePart.ui
+++ b/ViewSparePart.ui
@@ -54,6 +54,9 @@ QPushButton:pressed {
        <height>32</height>
       </size>
      </property>
+     <property name="autoDefault">
+      <bool>false</bool>
+     </property>
     </widget>
    </item>
    <item row="0" column="0">
