--- a/ViewTask.ui
+++ b/ViewTask.ui
@@ -163,6 +163,9 @@ QPushButton:pressed {
          <height>32</height>
         </size>
        </property>
+       <property name="autoDefault">
+        <bool>false</bool>
+       </property>
       </widget>
      </item>
      <item row="0" column="1">
