Developed functionality for adding employees to the order (needes some revision) + corresponding GUI fixes

--- a/images.qrc
+++ b/images.qrc
@@ -39,5 +39,6 @@
         <file>images/suzuki.png</file>
         <file>images/toyota.png</file>
         <file>images/infiniti.png</file>
+        <file>images/returnEmployee.png</file>
     </qresource>
 </RCC>
