--- a/StartWindow.ui
+++ b/StartWindow.ui
@@ -350,6 +350,18 @@ QPushButton:default {
       <enum>QFrame::Raised</enum>
      </property>
      <layout class="QGridLayout" name="gridLayout_11">
+      <property name="leftMargin">
+       <number>7</number>
+      </property>
+      <property name="topMargin">
+       <number>7</number>
+      </property>
+      <property name="rightMargin">
+       <number>7</number>
+      </property>
+      <property name="bottomMargin">
+       <number>7</number>
+      </property>
       <item row="0" column="0">
        <widget class="QFrame" name="frame_2">
         <property name="minimumSize">
